--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 **/target/maven-status/
 **/target/surefire-reports/
 **/target/test-classes/
-**/target/*-0.0.1-SNAPSHOT.jar
-**/target/*-0.0.1-SNAPSHOT.jar.original
+**/target/*.jar
+**/target/*.jar.original
 
 ### STS ###
 .apt_generated
